# pigeon

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pigeon/: __init__.py  chatdb.py  cli.py  config.py  daemon.py  sender.py  session.py  triage.py  truncation.py
src/pigeon/db/: __init__.py  base.py  postgres_db.py  sqlite_db.py
src/pigeon/llm/: __init__.py  anthropic_api.py  base.py  claude_cli.py  ollama.py  openai_api.py
tests/: test_chatdb.py  test_config.py  test_session.py  test_triage.py  test_truncation.py
